# Terrapulse

./: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  SCORING.md  TerraPulse-build-prompt.txt  render.yaml
backend/: .env.example  .gitignore  cleanup_seed.py  pyproject.toml  requirements.txt  set_authority.py
backend/app/: ai.py  auth.py  firebase.py  main.py  models.py  scoring.py  seed.py
backend/app/routers/: auth.py  hotspots.py  leaderboard.py  reports.py  sites.py
backend/tests/: test_scoring.py
frontend/: .env.example  .env.production  firestore.rules  index.html  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/: logo.avif
frontend/src/: App.tsx  api.ts  firebase.ts  image.ts  index.css
frontend/src/components/: HelpWidget.tsx  Navbar.tsx  ProtectedRoute.tsx  ReportForm.tsx
frontend/src/pages/: About.tsx  AuthorityDashboard.tsx  DisposalSites.tsx  Home.tsx  Leaderboard.tsx  Login.tsx  PublicMap.tsx  Register.tsx
