[project]
name = "backend"
version = "0.1.0"
description = "TerraPulse AI backend"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "firebase-admin>=7.4.0",
    "geohash2>=1.0",
    "cloudinary>=1.44.0",
    "python-dotenv>=1.2.0",
    "httpx>=0.28.0",
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
